<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <include
                        layout="@layout/main_toolbar_fading"/>

                </RelativeLayout>

                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_check_circle"/>

                <TextView
                    android:layout_marginTop="@dimen/spacing_l"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosansthai_semibold"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:textColor="@color/primary"
                    android:gravity="center_horizontal"
                    android:text="@string/step_request_qr_title_01"
                    tools:text="คุณสร้างคำร้องขอเอกสารเรียบร้อยแล้ว"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosansthai_regular"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:textColor="@color/default_text"
                    android:gravity="center_horizontal"
                    android:text="@string/step_request_qr_title_02"
                    tools:text="กรุณาส่ง QR code นี้ให้ผู้รับผิดชอบ"
                    />

                <TextView
                    android:layout_marginTop="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosansthai_semibold"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:textColor="@color/secondary"
                    android:letterSpacing="-0.02"
                    android:gravity="center_horizontal"
                    android:text="@string/step_request_qr_title_03"
                    tools:text="สแกน QR code เอกสาร"
                    />

                <ImageView
                    android:layout_marginTop="@dimen/spacing_l"
                    android:id="@+id/image_qr"
                    android:layout_width="220dp"
                    android:layout_height="220dp"
                    tools:src="@drawable/mock_qr"/>

                <TextView
                    android:layout_marginTop="30dp"
                    android:paddingStart="@dimen/spacing_xxl_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosansthai_semibold"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:textColor="@color/primary"
                    android:text="@string/step_request_qr_title_04"
                    tools:text="รายการเอกสารที่ส่งคำร้องขอ"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:paddingBottom="100dp"
                    android:clipToPadding="false"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/list_vc_item_summary"
                    android:layout_marginStart="@dimen/spacing_xxl_4"
                    android:layout_marginEnd="@dimen/spacing_xxl_4"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.card.MaterialCardView
            app:cardBackgroundColor="@color/white"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <include
                android:id="@+id/step_list_button"
                layout="@layout/primary_button"/>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>