<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vcIndexTitle"
            type="String" />

        <variable
            name="vcName"
            type="String" />

        <variable
            name="description"
            type="String" />

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginStart="@dimen/spacing_l"
        android:layout_marginEnd="@dimen/spacing_l"
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@{vcIndexTitle}"
            android:layout_marginStart="@dimen/spacing_l"
            android:layout_marginTop="@dimen/spacing_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosansthai_semibold"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/primary"
            android:letterSpacing="-0.02"
            android:gravity="center_horizontal"
            tools:text="รายละเอียดเอกสารที่ 1"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginStart="@dimen/spacing_l"
                android:layout_marginTop="@dimen/spacing_l"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/ButtonCancleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_request_type_of_vc"
                tools:text="ประเภทเอกสาร:"
                />

            <TextView
                android:text="@{vcName}"
                android:layout_marginEnd="@dimen/spacing_l"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosansthai_regular"
                android:textStyle="normal"
                android:textSize="24sp"
                android:textColor="@color/secondary"
                tools:text="บัตรประชาชน"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/step_request_description"
                android:layout_marginStart="@dimen/spacing_l"
                android:layout_marginTop="@dimen/spacing_s"
                style="@style/ButtonCancleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="คำขอเพิ่มเติม:"
                />

            <TextView
                android:layout_marginEnd="@dimen/spacing_l"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosansthai_regular"
                android:textStyle="normal"
                android:textSize="16sp"
                android:textColor="@color/default_text"
                android:letterSpacing="-0.02"
                android:gravity="center_horizontal"
                android:text="@{description}"
                tools:text="-"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="@dimen/spacing_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginStart="@dimen/spacing_l"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/ButtonCancleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_list_condition"
                tools:text="เงื่อนไขในการรับ:"
                />

            <TextView
                android:id="@+id/request_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/spacing_l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosansthai_regular"
                android:textStyle="normal"
                android:textSize="16sp"
                android:textColor="@color/secondary"
                android:letterSpacing="-0.02"
                android:gravity="center_horizontal"
                tools:text="เอกสารจำเป็น"
                android:text="@string/step_request_need_request"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <View
            android:layout_marginTop="@dimen/spacing_l"
            android:layout_marginStart="@dimen/spacing_l"
            android:layout_marginEnd="@dimen/spacing_l"
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="@dimen/stroke1dp"
            android:background="@color/disable" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>